--- a/demo/package.html
+++ b/demo/package.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" href="css/demo.css">
 <style>
 #myTab {
-	margin-top:20px;
+	margin-top:70px;
 }
 .nav-tabs {
 	margin:auto;
@@ -46,15 +46,14 @@ h3{
 	color:#C93;
 	font-family:"微软雅黑";
 	}
-.tab-pane p{
-margin-top:30px;
+.tab-pane img{
+width:100%;
 }
 </style>
 </head>
 <body data-debug="true">
 
      <div class="flypanels-content">
-          <h3>封装保护</h3>
           <ul id="myTab" class="nav nav-tabs">
              <li class="active"><a href="#qianbi" data-toggle="tab">钱币</a></li>
              <li><a href="#daguige" data-toggle="tab">大规格</a></li>
@@ -63,16 +62,16 @@ margin-top:30px;
           </ul>
           <div id="myTabContent" class="tab-content">
         <div class="tab-pane fade in active" id="qianbi">
-   
+        <img src="img/2015-03-05-02.jpg">
         </div>
         <div class="tab-pane fade" id="daguige">
-   
+        <img src="img/2015-03-05-01.jpg">
         </div>
         <div class="tab-pane fade" id="zhichao">
-    
+        <img src="img/2015-03-03-01.jpg">
         </div>
         <div class="tab-pane fade" id="youpiao">
-     
+        <img src="img/2015-06-08-01.jpg">
         </div>
      </div>
  
