--- a/demo/songping.html
+++ b/demo/songping.html
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" href="css/flyPanels.css">
 	<link rel="stylesheet" href="css/demo.css">
 <style>
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 500px) {
 .flypanels-content{
 	width:80%;
 	margin:auto;
@@ -58,7 +58,7 @@ a {
 	}
 .panel-heading{
 	color: #FFF;
-    background-color: #9D7C40;
+    background-color: #CCAE7B;
 	}
 .panel-body{
 	background-color:#E7E7E7;
