--- a/demo/team.html
+++ b/demo/team.html
@@ -54,22 +54,27 @@ margin-top:30px;}
           </ul>
 <div id="myTabContent" class="tab-content">
    <div class="tab-pane fade in active" id="zhuanjia">
-   <h4 style="text-align:center">方茂森</h4>
-<h5 style="text-align:center">上海造币厂高级工艺美术师</h5><img style="display:block; margin:auto" src="img/fangmaoseng.jpg">
-<p style="font-size:14px">1968年进入上海造币厂，最初以学徒工的身份从事三年浇铸工作。1971年，因爱好美术和书法得到上级赏识，被分配到设计制作车间，从事手工雕刻工作长达近十年。1979年参与纪念币的设计和制作。1989年，担任部级车间主任。2005年任职副总工艺美术师，负责工艺技术方面的工作。2009年退休，现为源泰评级现代金银币高级顾问。
-<a href="#" style="float:right">详情 >></a></p><hr>
- <h4 style="text-align:center">王福德</h4>
- <h5 style="text-align:center">沈阳造币厂高级工艺美术师</h5><img style="display:block; margin:auto" src="img/wangfude.jpg">
+   <h4 style="text-align:center"><strong>方茂森</strong></h4>
+<h5 style="text-align:center; color:#960">上海造币厂高级工艺美术师</h5><img style="display:block; margin:auto" src="img/fangmaoseng.jpg">
+<p style="font-size:14px">1968年进入上海造币厂，最初以学徒工的身份从事三年浇铸工作。1971年，因爱好美术和书法得到上级赏识，被分配到设计制作车间，从事手工雕刻工作长达近十年。1979年参与纪念币的设计和制作。1989年，担任部级车间主任。2005年任职副总工艺美术师，负责工艺技术方面的工作。2009年退休，现为源泰评级现代金银币高级顾问。</p><hr>
+ <h4 style="text-align:center;"><strong>王福德</strong></h4>
+ <h5 style="text-align:center; color:#960">沈阳造币厂高级工艺美术师</h5><img style="display:block; margin:auto" src="img/wangfude.jpg">
 <p style="font-size:14px">1966年毕业于鲁迅美术学院版画系。1968年分配于中国印钞造币总公司所属沈阳造币厂，从事国家流通硬币、金银纪念币设计雕刻工作。1979年参与新中国第一套金银纪念币“中华人民共和国成立三十周年”纪念币（人民大会堂）的设计与雕刻。1987年至1988年赴意大利罗马艺术雕刻学校研修。1999年荣获中国印钞造币总公司第五套人民币（硬币设计、研制）二等奖；2000年被评为正高级工艺美术师。并连续多届是“中国印钞造币有限公司”职称评定委员会委员。
-<a href="#" style="float:right">详情 >></a></p><hr>
-<h4 style="text-align:center">姚之元</h4>
- <h5 style="text-align:center">中国现代贵金属币收藏家</h5><img style="display:block; margin:auto" src="img/yaozhiyuan.jpg">
+<h4><strong>个人成就</strong></h4>
+由王福德设计雕刻的1982壬戌狗年生肖15克特种银币，荣获1982年度世界“标准银币”奖。首开中国现代贵金属币获国际大奖的先河。
+<br>
+王福德高级工艺美术师的代表作品还有：1980年第13届冬季奥运会纪念币、1984年中国杰出历史人物秦始皇纪念金币、1985年版熊猫金币、1986年国际和平年金银币、1987年中国杰出历史人物纪念银币，抗日战争胜利50周年，中国工农红军长征胜利60周年。澳门回归第1组邓小平像，澳门回归第3组8景图，中国古代科技发明发现等。
+</p><hr>
+<h4 style="text-align:center;"><strong>姚之元</strong></h4>
+ <h5 style="text-align:center; color:#960">中国现代贵金属币收藏家</h5><img style="display:block; margin:auto" src="img/yaozhiyuan.jpg">
 <p style="font-size:14px">姚之元先生酷爱收藏，并积极研究和推动中国现代贵金属币章的发展。尤其在5盎司以上的精品币章（如“天下为公5盎司纪念金币”、全世界仅发行10套的“中国古代科技发明发现1000克特种金币”等）领域，姚之元先生有非常丰富和独到的研究成果，并且积极的为国内的收藏爱好者提供咨询建议。
-<a href="#" style="float:right">详情 >></a></p><hr>
-<h4 style="text-align:center">葛祖康</h4>
- <h5 style="text-align:center">中国现代贵金属币、章的收藏爱好者。</h5><img style="display:block; margin:auto" src="img/gezukang.jpg">
+<h4><strong>个人成就</strong></h4>
+姚之元先生曾为上海收藏家配到1枚编号为6号的“中国古代科技发明发现”地动仪1000克特种金币，使其拥有唯一1对编号同为6号的“中国古代科技发明发现”指南针和地动仪1000克特种金币的佳话。</p><hr>
+<h4 style="text-align:center;"><strong>葛祖康</strong></h4>
+ <h5 style="text-align:center; color:#960">中国现代贵金属币、章的收藏爱好者。</h5><img style="display:block; margin:auto" src="img/gezukang.jpg">
 <p style="font-size:14px">葛祖康先生迄今已有60多年收藏史，现致力于中国现代贵金属币章的研究和推广工作。他收藏了绝大部分中国现代贵金属2盎司以下的金币和部分他喜爱的银币精品。他致力于中国现代贵金属中老、精、稀品种币的研究和推广。
-<a href="#" style="float:right">详情 >></a></p><hr>
+<h4><strong>个人成就</strong></h4>
+1993年起举办过三次个人中国现代贵金属币展。2002年起开始编辑发行《中国现代金银币大全》目录，至今已发行7版。2011年出版发行了《中国现代贵金属币章图谱》。日前，葛祖康先生出版新书《中国现代贵金属币章收藏与投资入门》，不久后，还将出版《中国现代贵金属币章版式和样币研究》等相关著作。</p><hr>
     </div>
     <div class="tab-pane fade" id="yewu">
     <img src="img/lufeilong.jpg" style="display:block; margin:auto;margin-top:20px;width:40%">
