--- a/code-work/demo.html
+++ b/code-work/demo.html
@@ -5,7 +5,6 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2, user-scalable=yes" />
 	<title>源泰评级</title>
-	<link href='http://fonts.useso.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="fonts/font-awesome-4.3.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/default.css">
@@ -57,24 +56,6 @@
 						<li><div><a target="main" href="serve.html" class="link">其它</a></div></li>
                     </ul>
 					</li>
-						<!--<li class="haschildren"><div><a href="#" class="link">资讯快报</a> <a href="#" class="expand">2<i class="fa icon"></i></a></div>
-							<ul>
-								<li><div><a target="main" href="gonggao.html" class="link" >公告</a></div></li>
-								<li><div><a target="main" href="xinwen.html" class="link">新闻</a></div></li>
-							</ul>
-						</li>
-						<li class="haschildren"><div><a href="#" class="link">下载送评单</a> <a href="#" class="expand">5<i class="fa icon"></i></a></div>
-							<ul>
-								<li><div><a target="main" href="#" class="link">现代钱币</a></div></li>
-								<li><div><a target="main" href="#" class="link">古钱</a></div></li>
-                                <li><div><a target="main" href="#" class="link">机制币</a></div></li>
-                                <li><div><a target="main" href="#" class="link">纸钞</a></div></li>
-                                <li><div><a target="main" href="#" class="link">邮票</a></div></li>
-							</ul>
-						</li>
-						<li><div><a target="main" href="#" class="link">立刻送评</a></div></li>
-                        <li><div><a target="main" href="#" class="link" >查询进度</a></div></li>
-                        -->
 					<li><div><a target="main" href="contact.html" class="link">联系我们</a></div></li>
 					</ul>
 				</nav>
@@ -113,13 +94,13 @@
                     
 				    <a target="main" href="login.html" style="display:none;"><button class="login-button">登录</button></a>
                     <a target="main" href="register.html" style="display:none;"><button class="register-button">注册</button></a>
-                    <a target="main" href="fenshu.html" > <button class="fenshu-button">源泰钱币分数报告</button></a>
+                    <a target="main" href="mark.html" > <button class="fenshu-button">源泰钱币分数报告</button></a>
                     <img class="code" src="img/code.png">
 			    </div>
 		     </div>
 	    </div>
 	    <!-- 右边隐藏侧边栏结束  -->
-<script src="http://libs.useso.com/js/jquery/1.11.0/jquery.min.js"></script>
+<script src="js/jquery.min.js"></script>
 <script src="js/kitUtils.js"></script>
 <script src="dist/jquery.flypanels.js"></script>
 <script src="js/fastclick.min.js"></script>
