--- a/code-work/index.html
+++ b/code-work/index.html
@@ -5,7 +5,6 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2, user-scalable=yes" />
 	<title>源泰评级</title>
-	<link href='http://fonts.useso.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="fonts/font-awesome-4.3.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/flyPanels.css">
@@ -30,9 +29,9 @@
 <div class="img_gallery" style="margin-top:50px;">
 	<div class="main_img">
 		<ul>
-			<li class="img_1"><img src="img/banner1.png"></span></li>
-			<li class="img_2"><img src="img/banner2.png"></span></li>
-			<li class="img_3"><img src="img/banner3.png"></span></li>
+			<li class="img_1"><a href=""><img src="img/banner1.png"></a></li>
+			<li class="img_2"><a href=""><img src="img/banner2.png"></a></li>
+			<li class="img_3"><a href=""><img src="img/banner3.png"></a></li>
 		</ul>
 		<a href="javascript:;" id="btn_prev"><i class="fa fa-chevron-left"></i></a>
 		<a href="javascript:;" id="btn_next"><i class="fa fa-chevron-right"></i></a>
@@ -70,7 +69,7 @@
       <div class="more"><a href="#">更多精品展现</a></div>
       </div>
    </div>
-<script src="http://libs.useso.com/js/jquery/1.11.0/jquery.min.js"></script>
+<script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/jquery.event.drag.js"></script>
 <script type="text/javascript" src="js/jquery.touchSlider.js"></script>
