--- a/code-work/mark.html
+++ b/code-work/mark.html
@@ -5,12 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2, user-scalable=yes" />
 	<title>源泰评级</title>
-	<link href='http://fonts.useso.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="fonts/font-awesome-4.3.0/css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="css/default.css">
-	<link rel="stylesheet" href="css/flyPanels.css">
-	<link rel="stylesheet" href="css/demo.css">
 <style>
 #myTab {
 	margin-top:70px;
@@ -21,7 +16,7 @@
     border-bottom: 1px solid #960;
 }
 .nav-tabs li {
-	width:33.3%;
+	width:25%;
 	text-align:center;
 }
 .nav-tabs>li.active>a, .nav-tabs>li.active>a:focus,.nav-tabs>li.active>a:hover{
@@ -66,7 +61,7 @@ table {
     height: 35px;
     width: 50px;
 }
-.tr_1 {
+.tr_1,.tr_2{
     background-color: rgb(170, 170, 170);
     color: rgb(255, 255, 255);
     font-size: 12px;
@@ -87,12 +82,13 @@ table {
 
      <div class="flypanels-content">
           <ul id="myTab" class="nav nav-tabs">
-             <li class="active"><a href="#qianbi" data-toggle="tab">类目报告</a></li>
-             <li><a href="#daguige" data-toggle="tab">热搜评品</a></li>
-             <li><a href="#zhichao" data-toggle="tab">特殊标签</a></li>
+             <li class="active"><a href="#leimu" data-toggle="tab">类目报告</a></li>
+             <li><a href="#resou" data-toggle="tab">热搜评品</a></li>
+             <li><a href="#hangtian" data-toggle="tab">中国航天日</a></li>
+             <li><a href="#liangzhounian" data-toggle="tab">两周年</a></li>
           </ul>
           <div id="myTabContent" class="tab-content">
-        <div class="tab-pane fade in active" id="qianbi">
+        <div class="tab-pane fade in active" id="leimu">
         <h4>各品类分数报告</h4>
         <h6>上一次更新：2016年07月14日</h6>
         <table id="score">
@@ -146,17 +142,52 @@ table {
         </table>
            <h5>*详细评分标准见源泰评级官网</h5>
         </div>
-        <div class="tab-pane fade" id="daguige">     
+        <div class="tab-pane" id="resou">  
+          <h4>热搜评品</h4>
+          <h6>上一次更新：2016年08月26日</h6>
+          <table id="score" style="position:fixed;">
+          <tbody>
+          <tr class="tr_2">
+          <td colspan="6">分数分布（%）</td>
+          </tr>
+          <tr class="tr_2">
+                  <td>100分</td>
+                  <td>99分</td>
+                  <td>98分</td>
+                  <td>97分</td>
+                  <td>96分</td>
+                  <td>95分及以下</td>
+              </tr>
+          </tbody>
+          </table>
+          <table id="score" style="position:absolute">
+           <tbody>
+           <tr class="tr_2">
+          <td colspan="6">2016年贺岁纪念8克银币</td> 
+          </tr>
+          <tr class="tr_2">
+                  <td>14.05</td>
+                  <td>85.58</td>
+                  <td>0.37</td>
+                  <td>/</td>
+                  <td>/</td>
+                  <td>/</td> 
+          </tr>
+           </tbody>
+          </table>
         </div>
-        <div class="tab-pane fade" id="zhichao">
+        <div class="tab-pane" id="hangtian">
+
+        </div>
+        <div class="tab-pane" id="liangzhounian">
+
         </div>
         </div>
      </div>
  
             </div>	
 			<!-- 内容部分结束 -->
-	<script src="http://libs.useso.com/js/jquery/1.11.0/jquery.min.js"></script>
-	<script src="js/kitUtils.js"></script>
+	<script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 	
     <script>
