--- a/code-work/mobileindex.html
+++ b/code-work/mobileindex.html
@@ -5,7 +5,6 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2, user-scalable=yes" />
 	<title>源泰评级</title>
-	<link href='http://fonts.useso.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="fonts/font-awesome-4.3.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="css/default.css">
@@ -48,25 +47,6 @@
 								<li><div><a target="main" href="serve.html" class="link">其它</a></div></li>
                             </ul>
 						</li>
-						<!--<li class="haschildren"><div><a href="#" class="link">资讯快报</a> <a href="#" class="expand">2<i class="fa icon"></i></a></div>
-							<ul>
-								<li><div><a target="main" href="gonggao.html" class="link" >公告</a>
-								</div></li>
-								<li><div><a target="main" href="xinwen.html" class="link">新闻</a></div></li>
-							</ul>
-						</li>
-						<li class="haschildren"><div><a href="#" class="link">下载送评单</a> <a href="#" class="expand">5<i class="fa icon"></i></a></div>
-							<ul>
-								<li><div><a target="main" href="#" class="link">现代钱币</a></div></li>
-								<li><div><a target="main" href="#" class="link">古钱</a></div></li>
-                                <li><div><a target="main" href="#" class="link">机制币</a></div></li>
-                                <li><div><a target="main" href="#" class="link">纸钞</a></div></li>
-                                <li><div><a target="main" href="#" class="link">邮票</a></div></li>
-							</ul>
-						</li>
-						<li><div><a target="main" href="#" class="link">立刻送评</a></div></li>
-                        <li><div><a target="main" href="#" class="link" >查询进度</a></div></li>
-                        -->
 						<li><div><a target="main" href="#" class="link">联系我们</a></div></li>
 					</ul>
 				</nav>
@@ -97,7 +77,7 @@
              <div class="swiper-wrapper">
           <div class="swiper-slide"  style="width:100%;">
             <div class="content-slide">
-           <img class="u5" src="img/u5.jpg" />
+           <img class="u5" src="img/u5.jpg"/>
             </div>
           </div>
         <div class="swiper-slide">
@@ -107,10 +87,10 @@
           </div>
       </div>    
       </div>
-      <div class="pagination"></div>
+      <div class="pagination" style="display:none;"></div>
       <div class="tabs">
         <a href="#" hidefocus="true"> <img src="img/u8.jpg" /></a>
-        <a href="#" hidefocus="true"  class="active"><img src="img/u5.jpg" /></a>
+        <a href="#" hidefocus="true"><img src="img/u5.jpg" /></a>
     </div>  
     
 			<div class="decoration">
@@ -153,15 +133,15 @@
 					<input title="search" type="text" placeholder="源泰钱币搜索"/>
 					<a href="mobileindex.html" aria-label="search" class="searchbutton"><i class="fa fa-search"></i></a>
 				    </div>
-				    <a href="fenshu.html" target="main" class="fenshubutton" ><button class="fenshu-button">源泰钱币分数报告</button></a>
+				    <a href="mark.html" target="main" class="fenshubutton" ><button class="fenshu-button">源泰钱币分数报告</button></a>
                     <img class="code" src="img/code.png">
 			</div>
 		</div>
 	</div>
 	    <!-- 右边隐藏侧边栏结束  -->
-<script src="http://libs.useso.com/js/jquery/1.11.0/jquery.min.js"></script>
+<script src="js/jquery.min.js"></script>
 <script src="dist/jquery.flypanels.js"></script>
-<script src="js/bootstrap.min.js"></script>
+
 <script src="js/kitUtils.js"></script>
 <script type="text/javascript" src="js/idangerous.swiper.min.js"></script> 
 <script>
@@ -197,10 +177,34 @@
 	speed:500,
 });
 $(".tabs a").click(function(e){
-e.preventDefault();
 	$(this).addClass('active');
 	tabsSwiper.swipeTo($(this).index());
+	e.preventDefault();
 });
-  </script>
+</script>
+<script type="text/javascript">
+function browserRedirect() { 
+var sUserAgent= navigator.userAgent.toLowerCase(); 
+var bIsIpad= sUserAgent.match(/ipad/i) == "ipad"; 
+var bIsIphoneOs= sUserAgent.match(/iphone os/i) == "iphone os"; 
+var bIsMidp= sUserAgent.match(/midp/i) == "midp"; 
+var bIsUc7= sUserAgent.match(/rv:1.2.3.4/i) == "rv:1.2.3.4"; 
+var bIsUc= sUserAgent.match(/ucweb/i) == "ucweb"; 
+var bIsAndroid= sUserAgent.match(/android/i) == "android"; 
+var bIsCE= sUserAgent.match(/windows ce/i) == "windows ce"; 
+var bIsWM= sUserAgent.match(/windows mobile/i) == "windows mobile"; 
+if (bIsIpad || bIsIphoneOs || bIsMidp || bIsUc7 || bIsUc || bIsAndroid || bIsCE || bIsWM) { 
+
+} else { 
+$('.u5').click(function (event) {
+window.open(this.src,'_blank');
+});
+$('.u8').click(function (event) {
+window.open(this.src,'_blank');
+});
+} 
+} 
+browserRedirect(); 
+</script>
 </body>
 </html>
