--- a/code-work/serve.html
+++ b/code-work/serve.html
@@ -69,7 +69,7 @@ width:100%;
         </div>
     </div>
 </div>
-<script src="http://libs.useso.com/js/jquery/1.11.0/jquery.min.js"></script>
+<script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script>
    $(function () {
