--- a/分页1/index.html
+++ b/分页1/index.html
@@ -2,16 +2,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>js table设置表格行tr分页代码 JS设置表格行分页效果_特效网</title>
-</head>
-
-<body>
-
+<title>js分页</title>
 <style type="text/css">
 .tablebox{border:solid 1px #ddd;}
 .tablebox td{text-align:center;border:solid 1px #ddd;padding:5px;}
 </style>
-
+</head>
+<body>
 <div style="width:530px;margin:0 auto;">
 	<table class="tablebox" width="500" border="0" cellpadding="0" cellspacing="0">
 		<tbody id="table2">
